<resources>
    <string name="app_name">tzapp</string>
    <string name="loading">Loading...</string>
    <string name="lottie_animation">Lottie animation</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="hide_show_animation">Hide / Show Animation</string>
    <string name="show_custom_alert">Show custom alert</string>
    <string name="go_to_second_screen">Go to second screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_alert">Custom Alert</string>
    <string name="close">Close</string>
    <string name="load_data_from_server">Load Data from server....</string>
    <string name="random_value">Random value</string>
    <string name="ramdomize_values">Ramdomize values</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="zero">0%</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="closes">Close</string>
</resources>