<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardCornerRadius="27dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alertIcon"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/alertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_alert"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/im1"
                    app:layout_constraintStart_toStartOf="@+id/im1"
                    app:layout_constraintTop_toBottomOf="@+id/im1" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/im2"
                    app:layout_constraintStart_toStartOf="@+id/im2"
                    app:layout_constraintTop_toBottomOf="@+id/im2" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/im3"
                    app:layout_constraintStart_toStartOf="@+id/im3"
                    app:layout_constraintTop_toBottomOf="@+id/im3" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/im4"
                    app:layout_constraintStart_toStartOf="@+id/im4"
                    app:layout_constraintTop_toBottomOf="@+id/im4" />

                <ImageView
                    android:id="@+id/im1"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_brightness_1_24"
                    app:layout_constraintBottom_toBottomOf="@+id/tire1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/tire1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_24"
                    app:layout_constraintStart_toEndOf="@id/im1"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/im2"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_left_circle_1_svgrepo_com"
                    app:layout_constraintBottom_toBottomOf="@+id/tire2"
                    app:layout_constraintStart_toEndOf="@id/tire1"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/tire2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_24"
                    app:layout_constraintStart_toEndOf="@id/im2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/im3"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_baseline_panorama_fish_eye_24"
                    app:layout_constraintBottom_toBottomOf="@+id/tire3"
                    app:layout_constraintStart_toEndOf="@id/tire2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/tire3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_24"
                    app:layout_constraintStart_toEndOf="@id/im3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/im4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_baseline_panorama_fish_eye2_24"
                    app:layout_constraintBottom_toBottomOf="@+id/tire3"
                    app:layout_constraintStart_toEndOf="@id/tire3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_alert_btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                android:background="@drawable/custom_botton_style"
                android:text="@string/closes" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>