<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tzcolor"
    tools:context=".presentation.fragments.SecondScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/backbutton"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:src="@drawable/backarrow"
            />

        <LinearLayout
            android:id="@+id/randomValueTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/randomValueTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:gravity="start"
                android:text="@string/random_value"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/randomValueTitleTxtPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/zero"
                android:textColor="@color/white" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/randomProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar" />

        <LinearLayout
            android:id="@+id/randomValueTitleLayoutTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/randomValueTitleTxtTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:gravity="start"
                android:text="Random value 2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/randomValueTitleTxtPercentageTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/zero"
                android:textColor="@color/white" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/randomProgressBartwo"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar" />

        <Button
            android:id="@+id/randomize_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ramdomize_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="68sp"
                    android:layout_height="74sp"
                    app:cardBackgroundColor="#27292C"
                    app:cardCornerRadius="12dp">
                    <TextView
                        android:id="@+id/hours_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="32sp"
                        android:textColor="@color/white"
                        android:text="00"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/hours"
                    />
            </LinearLayout>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent">
            </View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="68sp"
                    android:layout_height="74sp"
                    app:cardBackgroundColor="#27292C"
                    app:cardCornerRadius="12dp">
                    <TextView
                        android:id="@+id/minutes_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="32sp"
                        android:textColor="@color/white"
                        android:text="00"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/minutes"
                    />
            </LinearLayout>
            <View
                android:layout_width="10dp"
                android:layout_height="match_parent">
            </View>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="68sp"
                    android:layout_height="74sp"
                    app:cardBackgroundColor="#27292C"
                    app:cardCornerRadius="12dp">
                    <TextView
                        android:id="@+id/seconds_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="32sp"
                        android:textColor="@color/white"
                        android:text="00"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/seconds"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/downloadFromServerProgressTittleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/downloadFromServerProgressTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="start"
                android:text="@string/load_data_from_server"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/downloadFromServeTittlePercentageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/zero"
                android:textColor="@color/white" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/downloadFromServerProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>